--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,37 @@
 % Encoding: UTF-8
 
+@InProceedings{miao2019kernelized,
+  author    = {Ning Miao, Hao Zhou, Chengqi Zhao, Lei Li},
+  title     = {Kernelized Bayesian Softman for Text Generation},
+  booktitle = {Neural Information Processing Systems (NeurIPS)},
+  year      = {2019},
+  month     = dec,
+}
+
+@InProceedings{zhao2019what,
+  author    = {Zhichen Zhao, Lei Li, Bowen Zhang, Yuning Jiang, Li Xu, Meng Wang, Weiying Ma},
+  title     = {What You Look Matters: Offline Evaluation of Advertising Creatives for Cold Start Problem},
+  booktitle = {CIKM},
+  year      = {2019},
+  month     = nov,
+}
+
+@InProceedings{wang2019towards,
+  author    = {Mingxuan Wang, Jun Xie, Zhixing Tan, Jinsong Su, Deyi Xiong, Lei Li},
+  title     = {Towards Linear Time Neural Machine Translation with Capsule Networks},
+  booktitle = {EMNLP},
+  year      = {2019},
+  month     = nov,
+}
+
+@InProceedings{yaofu2019rethinking,
+  author    = {Yao Fu, Hao Zhou, Jiaze Chen and Lei Li},
+  title     = {Rethinking Text Attribute Transfer: A Lexical Analysis},
+  booktitle = {12th International Conference on Natural Language Generation (INLG)},
+  year      = {2019},
+  month     = oct,
+}
+
 @InProceedings{jiang2019svd,
   author    = {Qing-Yuan Jiang, Yi He, Gen Li, Jian Lin, Lei Li, Wu-Jun Li.},
   title     = {{SVD}: A Large-Scale Short Video Dataset for Near Duplicate Video Retrieval.},
@@ -132,7 +164,7 @@ is released at https://github.com/NingMiao/CGMH},
 
 @InProceedings{cao2018brits,
   author    = {Wei Cao and Dong Wang and Jian Li and Hao Zhou and Yitan Li and Lei Li},
-  title     = {BRITS: Bidirectional Recurrent Imputation for Time Series},
+  title     = {{BRITS}: Bidirectional Recurrent Imputation for Time Series},
   booktitle = {Neural Information Processing Systems (NeurIPS)},
   year      = {2018},
   month     = dec,
